# deep-neural-network-fundamentals

./: README.md  [Artificial_Neural_Networks]_[Exercise]_Makrmore.ipynb  environment.yml  pyproject.toml
back propagation fundamentals/: 001_basics.ipynb  002_artificial_neurons.ipynb  003_artificial_neurons_pytorch.ipynb
back-propagation-fundamentals/: 002_artificial_neurons.ipynb
