[tool.poetry]
name = "deep-neural-network-fundementals"
version = "1.0.0"
description = ""
authors = ["vithushanms <msvithushan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.1.post1"
graphviz = "^0.20.3"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
